--- a/text/app/app.tex
+++ b/text/app/app.tex
@@ -45,5 +45,5 @@ Niniejszy rozdział ma na celu:
 \section{Implementacja teorii sensorów pomiarowych}\label{sect:sensors-code}
 \input{text/app/sensors-code}
 
-\section{Implementacja pełnego laboratorium}\label{sect:laboratory}
+\section{Implementacja pełnego ćwiczenia laboratoryjnego}\label{sect:laboratory}
 \input{text/app/laboratory}
