--- a/text/app/ui-parts/sensor-config.tex
+++ b/text/app/ui-parts/sensor-config.tex
@@ -17,10 +17,11 @@ fragment przedstawiony został w listingu \ref{lst:config-field-data}.
   dane do generowania pól konfiguracyjnych}
 
 Plik konfiguracyjny ma formę tablicy zawierającej obiekty, które definują dane pole. Każdy obiekt
-składa się~z~par klucz-wartość. Klucz \colortt{sensor} określa do jakiego laboratorium przynależą
-definiowane wartości, \colortt{id} wykorzystywany jest przy manipulowaniu stanem, którego zadaniem
-jest przechowywanie informacji~o~obecnej konfiguracji sensora, natomiast \colortt{type} pozwala na
-zdefiniowanie jaki wariant pola ma zostać wyświetlony. Zarządzanie stanem oraz jak zostało to
-rozwiązane~w~aplikacji opisane zostało~w~rozdziale \ref{sect:context}. Pozostałe klucze --
+składa się~z~par klucz-wartość. Klucz \colortt{sensor} określa do jakiego ćwiczenia laboratoryjnego
+przynależą definiowane wartości, \colortt{id} wykorzystywany jest przy manipulowaniu stanem,
+którego zadaniem jest przechowywanie informacji~o~obecnej konfiguracji sensora, natomiast \colortt
+{type} pozwala na zdefiniowanie jaki wariant pola ma zostać wyświetlony. Zarządzanie stanem oraz
+jak zostało to rozwiązane~w~aplikacji opisane zostało~w~rozdziale \ref{sect:context}. Pozostałe
+klucze --
 \colortt{label, options, optionLabels, defaultValue} wykorzystywane są do określenia wyświetlanego
 tytułu pola, opcji dostępnych do wyboru oraz domyślnie wybranej opcji.
