--- a/text/app/ui-parts/theory.tex
+++ b/text/app/ui-parts/theory.tex
@@ -1,5 +1,5 @@
-Część teoretyczna do każdego laboratorium prezentowana jest~w~postaci okna dialogowego. Taka
-implementacja została wykorzystana, aby użytkownik nie musiał zamykać strony~z~wykonywanym
+Część teoretyczna do każdego ćwiczenia laboratoryjnego prezentowana jest~w~postaci okna dialogowego.
+Taka implementacja została wykorzystana, aby użytkownik nie musiał zamykać strony~z~wykonywanym
 ćwiczeniem (co skutkowałoby utratą postępów, ponieważ aplikacja nie posiada bazy danych). Zawartość
 okna dialogowego konfigurowana jest przez dwa dodatkowe komponenty -- \texttt{Formula, Table},
 których zadaniem jest generowanie odpowiednio listy wzorów oraz tabel~z~danymi na podstawie plików
