--- a/text/sensor-theory/strain-gauge.tex
+++ b/text/sensor-theory/strain-gauge.tex
@@ -111,7 +111,7 @@ tensometry~w~układzie:
   \varepsilon_4)\big)
 \end{equation}
 
-\begin{eqparams}[W każdym~z~powyższych wzorów (\textit{\textrm{i}} = 1,2,3,4):]
+\begin{eqparams}[W każdym~z~powyższych wzorów (przyjmując \textit{\textrm{i}} = 1,2,3,4):]
   \Delta R_i & zmiana rezystancji i-tego tensometru (wartość może być dodatnia lub ujemna)\\
   R_i & bazowa rezystancja i-tego tensometru\\
   k & współczynnik odkształceń (stała tensometryczna)\\
@@ -122,13 +122,13 @@ tensometry~w~układzie:
 \end{eqparams}
 
 We wzorach pojawia się dodatkowa stała $k_1$, ponieważ rzeczywiste stałe tensometryczne
-odbiegają od wartości założonych przez producenta sensora w fazie projektowania.
+odbiegają od wartości założonych przez producenta sensora~w~fazie projektowania.
 
-Problem braku kompensacji temperaturowej w układach ćwierćmostkowym oraz półmostkowym z ramionami
-przeciwległymi można rozwiązać poprzez zastosowanie tensometrów biernych. Montuje się je w pobliżu
+Problem braku kompensacji temperaturowej~w~układach ćwierćmostkowym oraz półmostkowym~z~ramionami
+przeciwległymi można rozwiązać poprzez zastosowanie tensometrów biernych. Montuje się je~w~pobliżu
 dwóch czynnych tensometrów, jednakże bez przytwierdzania ich do elementu, którego odkształcenia są
-mierzone \cite{gawedzki2010}. W takiej konfiguracji sensory bierne nie zmieniają swojej rezystancji
-na skutek działającej siły, a tylko na zmiany temperatury, dzięki czemu umożliwią kompensowanie jej
-wpływu.
+mierzone \cite{gawedzki2010}.~W~takiej konfiguracji sensory bierne nie zmieniają swojej rezystancji
+na skutek działającej siły,~a~tylko przez zmianę temperatury, dzięki czemu umożliwią kompensowanie
+jej wpływu.
 
 
