--- a/text/app/ui-parts/tasks.tex
+++ b/text/app/ui-parts/tasks.tex
@@ -24,4 +24,4 @@ przedstawia listing \ref{lst:task-prompts}.
   do wyświetlania zadań.}
 
 \addsnippet{code/task-prompts}{\label{lst:task-prompts}Implementacja komponentu dynamicznie
-  wyświetlającego zadania do laboratorium.}
+  wyświetlającego zadania do ćwiczenia laboratoryjnego.}
