--- a/text/app/ui.tex
+++ b/text/app/ui.tex
@@ -16,7 +16,7 @@ formularzy oraz \texttt{Text, Heading} do manipulacji nagłówkami~i~tekstem na 
 \subsection{Elementy interfejsu}
 Głównymi elementami interfejsu są komponenty odpowiedzialne za:
 \begin{itemize}
-  \item[--] konfigurację sensora dla danego laboratorium,
+  \item[--] konfigurację sensora dla danego ćwiczenia laboratoryjnego,
   \item[--] wyświetlanie zadań do wykonania oraz wygenerowanych danych,
   \item[--] przyjmowanie oraz weryfikowanie odpowiedzi wpisywanych przez użytkownika,
   \item[--] prezentowanie wzorów oraz danych niezbędnych do obliczeń,
