--- a/text/sensor-theory/rtd.tex
+++ b/text/sensor-theory/rtd.tex
@@ -8,7 +8,7 @@ rezystancji czujnika $R_0$~w~temperaturze odniesienia $T_0$, którą przyjmuję 
 \cite{gawedzki2010}. Zależność rezystancji od temperatury standardowo jest nieliniowa~i~wyznaczana
 jest eksperymentalnie, jednakże można wykorzystać aproksymację funkcją liniową:
 
-\begin{equation}
+\begin{equation}\label{eqn:resistance-rtd}
   R_T=R_0(1+\alpha\cdot\Delta T)
 \end{equation}
 
