--- a/text/sensor-theory/sensor-theory.tex
+++ b/text/sensor-theory/sensor-theory.tex
@@ -16,7 +16,7 @@ temperatury, przemieszczenia oraz naprężeń. Przedstawione zostały zależnoś
 układów pomiarowych, które dotyczą omawianych czujników.
 
 % Sensory temperatury - RTD + Thermocouple
-\section{Sensory temperatury}
+\section{Sensory temperatury}\label{sect:theory-temperature}
 W~aplikacji zaimplementowane zostały dwa stosowane typy przetworników temperaturowych:
 \begin{itemize}
   \item [--] Termorezystory metalowe (RTD, ang. \textit{Resistance Temperature Detector}),
@@ -52,7 +52,7 @@ ultradźwiękowych metod pomiarowych.
 \input{text/sensor-theory/lvdt}
 
 % Sensory naprężenia - Strain gauge
-\section{Sensory naprężenia}
+\section{Sensory naprężenia}\label{sect:theory-strain}
 Czujniki naprężenia operują~w~oparciu~o~zjawisko zmiany rezystancji materiału,~z~którego sensor
 jest wykonany, pod wpływem naprężeń mechanicznych. Zmiana rezystancji spowodowana jest odkształcaniem
 się elementu, do którego przytwierdzony jest przetwornik tensometryczny. Podstawową funkcję
