--- a/text/sensor-theory/strain-gauge.tex
+++ b/text/sensor-theory/strain-gauge.tex
@@ -55,7 +55,7 @@ rysunku~\ref{img:strain-gauge} przedstawiony został schemat układu mostkowego.
 mostka), do wyznaczenia napięcia na wyjściu układu, korzystając~z~zależności \ref{eqn:strain-temp},
 stosuje się równanie:
 
-\begin{equation}
+\begin{equation}\label{eqn:quater-bridge}
   U_{wy}=\cfrac{1}{4}\cdot{U_z}\cdot\cfrac{\Delta R_1}{R_1}=\cfrac{1}{4}\cdot{U_z}\cdot({k}
   \cdot\varepsilon_1+{k_1}\cdot\alpha_1\Delta{T_1})
 \end{equation}
