--- a/text/sensor-theory/thermocouple.tex
+++ b/text/sensor-theory/thermocouple.tex
@@ -5,7 +5,7 @@ jest pomiar różnicy potencjałów (spadku napięcia), pojawiającego się mię
 przewodników. Działanie zjawiska przedstawione zostało na rysunku \ref{img:thermoelectric-effect}.
 Zmierzona różnica potencjałów wyraża się równaniem:
 
-\begin{equation}
+\begin{equation}\label{eqn:voltage-thermocouple}
   \Delta \varphi = S_{AB}\cdot\Delta T
 \end{equation}
 
