--- a/text/app/ui-parts/graph.tex
+++ b/text/app/ui-parts/graph.tex
@@ -1,7 +1,7 @@
 Generowanie wykresów~w~aplikacji wykorzystuje do tego bibliotekę \textit{Recharts}. Udostępnia ona
 komponenty \texttt{LineChart, CartesianGrid, XAxis, YAxis, Line}, które połączone pozwalają na
 wyświetlanie wykresów. Dane, które mają być wykreślone podawane są poprzez zewnętrzne atrybuty,
-ponieważ generowane są~w~komponencie danego laboratorium (implementacja przedstawiona
+ponieważ generowane są~w~komponencie danego ćwiczenia laboratoryjnego (implementacja przedstawiona
 została~w~rozdziale \ref{sect:laboratory}).
 
 Dodatkowo wykorzystana została biblioteka \textit{recharts-to-png}, która pozwala na zapisywanie
@@ -14,6 +14,5 @@ funkcjonalności przedstawiona została~w~listingu \ref{lst:chart-download}.
 
 Aplikacja posiada dwa warianty komponetu do wyświetlania wykresu -- \texttt{SingleLineChart} oraz
 \texttt{MultiLineChart}. Wykorzystywane są odpowiednio, tam gdzie potrzebny jest wykres, który
-posiada tylko jedną linię lub który posiada wiele linii (w przypadku aplikacji jest to
-laboratorium~z~sensorami temperatury, gdzie wykresy do charakterystyk dynamicznych posiadają trzy
-linie).
+posiada tylko jedną linię lub który posiada wiele linii (w przypadku aplikacji są to ćwiczenia do
+sensorów temperatury, gdzie wykresy do charakterystyk dynamicznych posiadają trzy linie).
